--- a/src/components/App/styles.scss
+++ b/src/components/App/styles.scss
@@ -1,3 +1,9 @@
 html {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
 }
+
+.hangman-container {
+  display: flex;
+
+  justify-content: center;
+}
