--- a/src/index.scss
+++ b/src/index.scss
@@ -1,2 +1,3 @@
 @import "./components/App/styles.scss";
 @import "./components/Hangman/styles.scss";
+@import "./components/HangingMan/styles.scss";
