--- a/src/index.scss
+++ b/src/index.scss
@@ -1,3 +1,4 @@
 @import "./components/App/styles.scss";
+@import "./components/Alphabet/styles.scss";
 @import "./components/Hangman/styles.scss";
 @import "./components/HangingMan/styles.scss";
