--- a/src/components/Hangman/styles.scss
+++ b/src/components/Hangman/styles.scss
@@ -3,7 +3,7 @@
   flex-direction: column;
   align-items: center;
 
-  .letter {
+  .word-letter {
     display: inline-block;
     font-size: 30px;
     margin: 10px;
