--- a/src/components/App/styles.scss
+++ b/src/components/App/styles.scss
@@ -5,6 +5,7 @@ html {
 .app-container {
   display: flex;
   justify-content: center;
+  margin-top: 50px;
 
   .space-to-continue {
     margin-top: 20px;
