--- a/src/components/HangingMan/styles.scss
+++ b/src/components/HangingMan/styles.scss
@@ -8,8 +8,8 @@
   $pole-top-width: 150px;
   $pole-rope-height: 25px;
 
-  $face-width: 55px;
-  $face-height: 100px;
+  $face-width: 60px;
+  $face-height: 60px;
 
   $body-width: $pole-width;
   $neck-height: 15px;
@@ -18,7 +18,7 @@
   $spine-height: 100px;
   $body-leg-length: 50px;
   $body-leg-translation: 140deg;
-  $penis-length: -5px;
+  $leg-offset: -5px;
 
   /**
    * Structure for hanging our man...
@@ -118,7 +118,7 @@
       }
 
       &.hanging-man-leg-left {
-        top: $pole-rope-height + $face-height + $neck-height + $spine-height - $body-width - $penis-length;
+        top: $pole-rope-height + $face-height + $neck-height + $spine-height - $body-width - $leg-offset;
         left: $pole-margin + $pole-top-width - $body-leg-length + 2 * $body-width;
         height: $body-width;
         width: $body-leg-length;
@@ -126,7 +126,7 @@
       }
 
       &.hanging-man-leg-right {
-        top: $pole-rope-height + $face-height + $neck-height + $spine-height - $body-width - $penis-length;
+        top: $pole-rope-height + $face-height + $neck-height + $spine-height - $body-width - $leg-offset;
         left: $pole-margin + $pole-top-width - $body-width;
         height: $body-width;
         width: $body-leg-length;
